Partial commit of DR sequence numbers