@@ -24,7 +24,6 @@ import java.util.concurrent.ExecutionException;
 import java.util.concurrent.ScheduledFuture;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.concurrent.atomic.AtomicLong;
 
 import org.voltcore.logging.VoltLogger;
 import org.voltcore.messaging.Mailbox;
@@ -325,9 +324,8 @@ public class RejoinProducer extends JoinProducerBase {
                         m_completionAction.setSnapshotTxnId(event.multipartTxnId);
                     }
 
-                    for (Map.Entry<Integer, Long> e : event.remoteDCLastUniqueIds.get(0).entrySet()) {
-                        SnapshotSaveAPI.m_lastAppliedUniqueId.put(e.getKey(), new AtomicLong(e.getValue()));
-                        VoltDB.instance().getConsumerDRGateway().notifyOfLastAppliedSpUniqueId(0, e.getValue());
+                    for (Map.Entry<Integer, Pair<Long, Long>> e : event.remoteDCLastIds.get(0).entrySet()) {
+                        VoltDB.instance().getConsumerDRGateway().notifyOfLastAppliedBinaryLog(e.getValue().getFirst(), e.getValue().getSecond());
                     }
 
                     REJOINLOG.debug(m_whoami + " monitor completed. Sending SNAPSHOT_FINISHED "
